config/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: catapp
  name: catapp
spec:
  # Use a different type if LoadBalancer is not supported on your k8s environment
  type: LoadBalancer
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: catapp
